--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/data-grid": "^4.0.0-alpha.13",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -15,6 +16,7 @@
     "@types/react-helmet": "^6.1.0",
     "@types/react-redux": "^7.1.12",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-youtube": "^7.6.2",
     "@types/styled-components": "^5.1.5",
     "antd": "^4.9.4",
     "axios": "^0.21.0",
@@ -27,6 +29,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-youtube": "^7.13.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-promise": "^0.6.0",
