--- a/package.json
+++ b/package.json
@@ -19,21 +19,29 @@
     "@types/react-youtube": "^7.6.2",
     "@types/styled-components": "^5.1.5",
     "antd": "^4.9.4",
+    "apexcharts": "^3.23.1",
     "axios": "^0.21.0",
     "node-sass": "^4.14.1",
     "query-string": "^6.13.7",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
     "react-calendar": "^3.2.1",
+    "react-carousel-slider": "^2.0.13",
     "react-dom": "^17.0.1",
+    "react-export-excel": "^0.5.3",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-slick": "^0.27.14",
+    "react-toastify": "^6.2.0",
     "react-youtube": "^7.13.0",
+    "recharts": "^2.0.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.0.3",
